# libxtc

./: CMakeLists.txt  README.md  xtc_writer.cpp
cmake/: xtcConfig.cmake.in
examples/: CMakeLists.txt  example_usage.cpp
libxtc/: xtc_reader.cpp  xtc_reader.h  xtc_unpack.cpp  xtc_unpack.h  xtc_writer.cpp  xtc_writer.h
